--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=TEMMAPC;database=AzureDB;Integrated Security=true;TrustServerCertificate=True;"
+    "DefaultConnection": "server=temmazure1sqldb1.database.windows.net;database=TemmaAz1;Integrated Security=false;TrustServerCertificate=True;User Id=Temma1AzSQLDB1;Password=Grey@Card1;"
   },
   "Logging": {
     "LogLevel": {
